@@ -1,5 +1,10 @@
 2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>
 
+	* invest/quotes.py:
+	Fix error when yahoo returns N/A. Fixes bug #413603
+
+2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>
+
 	* invest/widgets.py:
 	Fix division by zero, and bug #397941.
 
